--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start": "node ./server/app.js",
     "pretest": "eslint ./server --fix",
     "test": "echo \"Tests complete\"",
-    "heroku-postbuild": "webpack"
+    "heroku-postbuild": "webpack",
+    "build": "gulp build",
+    "watch": "gulp watch"
   },
   "keywords": [
     "Node",
@@ -27,6 +29,7 @@
     "eslint": "^8.36.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.27.5",
+    "gulp": "^4.0.2",
     "nodemon": "^2.0.21",
     "webpack": "^5.76.2",
     "webpack-cli": "^5.0.1"
@@ -46,7 +49,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "redis": "^4.6.5",
+    "sass": "^1.62.0",
     "serve-favicon": "^2.5.0",
-    "underscore": "^1.13.6"
+    "underscore": "^1.13.6",
+    "websocket": "^1.0.34"
   }
 }
