--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "redis": "^4.6.5",
     "sass": "^1.62.0",
     "serve-favicon": "^2.5.0",
+    "socket.io": "^4.6.1",
     "underscore": "^1.13.6",
     "websocket": "^1.0.34"
   }
