--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.0.4",
     "express-session": "^1.17.3",
+    "got": "^11.8.6",
     "helmet": "^6.0.1",
     "mongoose": "^7.0.2",
     "react": "^18.2.0",
