--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "webpackWatch": "webpack watch",
     "nodemon": "nodemon -e js,html,css --watch ./server --watch ./hosted ./server/app.js",
     "start": "node ./server/app.js",
+    "css-build": "node-sass --omit-source-map-url sass/mystyles.scss css/mystyles.css",
+    "css-watch": "npm run css-build -- --watch",
     "pretest": "eslint ./server --fix",
     "test": "echo \"Tests complete\"",
     "heroku-postbuild": "webpack",
     "build": "gulp build",
     "watch": "gulp watch"
+    
+
   },
   "keywords": [
     "Node",
@@ -26,10 +30,12 @@
     "@babel/core": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.2",
+    "bulma": "^0.9.4",
     "eslint": "^8.36.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.27.5",
     "gulp": "^4.0.2",
+    "node-sass": "^8.0.0",
     "nodemon": "^2.0.21",
     "webpack": "^5.76.2",
     "webpack-cli": "^5.0.1"
