--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "heroku-postbuild": "webpack",
     "build": "gulp build",
     "watch": "gulp watch"
-    
-
   },
   "keywords": [
     "Node",
@@ -24,21 +22,24 @@
     "Redis",
     "Login"
   ],
-  "author": "Cody Van De Mark / Austin Willoughby",
+  "author": "Taode Ogden",
   "license": "Apache 2.0",
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.2",
-    "bulma": "^0.9.4",
+    "css-loader": "^6.7.3",
     "eslint": "^8.36.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.27.5",
     "gulp": "^4.0.2",
+    "mini-css-extract-plugin": "^2.7.5",
     "node-sass": "^8.0.0",
     "nodemon": "^2.0.21",
-    "webpack": "^5.76.2",
-    "webpack-cli": "^5.0.1"
+    "sass-loader": "^13.2.2",
+    "style-loader": "^3.3.2",
+    "webpack": "^5.81.0",
+    "webpack-cli": "^5.0.2"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -56,7 +57,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "redis": "^4.6.5",
-    "sass": "^1.62.0",
     "serve-favicon": "^2.5.0",
     "socket.io": "^4.6.1",
     "underscore": "^1.13.6",
